cabal-version:      2.4
name:               hunkemoeller
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Khanh Hua
maintainer:         khanh.hua@doctari.de

-- A copyright notice.
-- copyright:
-- category:
extra-source-files:
    CHANGELOG.md
    README.md

executable hunkemoeller
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    default-extensions: OverloadedStrings
    build-depends:
        base ^>=4.14.3.0
      , bytestring ==0.10.12.0
      , utf8-string ==1.0.2
      , directory ==1.3.7.0
      , network-simple ==0.4.5
    hs-source-dirs:   app
    default-language: Haskell2010
